# aoc2025

./: Cargo.toml  README.md
src/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  graph.rs  grid.rs  main.rs  utils.rs
